Fix passing variable to the LAVA action
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -71,7 +71,7 @@ jobs:
           fail_action_on_failure: false
           save_result_as_artifact: true
           save_job_details: true
-          result_file_name: "${MACHINE}"
+          result_file_name: "${{ env.MACHINE }}"
 
   publish-test-results:
     name: "Publish Tests Results"
