--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -52,11 +52,12 @@ jobs:
           TARGET=${{ matrix.target }}
           FIND_PATH="${TARGET#*/}"
           MACHINE="${FIND_PATH%/*}"
+          FILE_NAME=$("${FIND_PATH%.yaml}" | tr "/" "-")
           find "${{ matrix.target }}" -name "*.yaml" -exec sed -i "s|{{ MACHINE }}|${MACHINE}|g" '{}' \;
           find "${{ matrix.target }}" -name "*.yaml" -exec sed -i "s|{{ AP_NAME }}|${{secrets.AP_NAME}}|g" '{}' \;
           find "${{ matrix.target }}" -name "*.yaml" -exec sed -i "s|{{ AP_PASSWORD }}|${{secrets.AP_PASSWORD}}|g" '{}' \;
           cat "${{ matrix.target }}"
-          echo "MACHINE=${MACHINE}" >> $GITHUB_ENV
+          echo "MACHINE=${FILE_NAME}" >> $GITHUB_ENV
 
       - name: Submit ${{ matrix.target }}
         env:
