Switch to fail-test branch of test-definitions
This is done to be able to re-run the test with different outcome

Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/lava/rb3g2/boot.yaml
+++ b/lava/rb3g2/boot.yaml
@@ -45,10 +45,11 @@ actions:
     - from: git
       name: "{{ MACHINE }}-smoke-test"
       path: automated/linux/smoke/smoke.yaml
-      repository: https://github.com/linaro/test-definitions.git
+      branch: fail-test
+      repository: https://github.com/mwasilew/test-definitions.git
       parameters:
         SKIP_INSTALL: "True"
-        TESTS: "pwd, uname -a, ip a, lsusb"
+        TESTS: "pwd, uname -a, ip a"
         AP_NAME: "{{ AP_NAME }}"
         AP_PASSWORD: "{{ AP_PASSWORD }}"
 context:
