--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -63,13 +63,14 @@ jobs:
         env:
           MACHINE: ${{ env.MACHINE }}
         timeout-minutes: 20
-        uses: mwasilew/lava-action@result-file-overwrite
+        uses: mwasilew/lava-action@incomplete-test-results
         with:
           lava_token: ${{ secrets.LAVA_TOKEN }}
           lava_url: 'lava.infra.foundries.io'
           job_definition: ${{ matrix.target }}
           wait_for_job: true
           fail_action_on_failure: false
+          fail_action_on_incomplete: false
           save_result_as_artifact: true
           save_job_details: true
           result_file_name: "${{ env.MACHINE }}"
