--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -63,7 +63,7 @@ jobs:
         env:
           MACHINE: ${{ env.MACHINE }}
         timeout-minutes: 20
-        uses: mwasilew/lava-action@incomplete-test-results
+        uses: foundriesio/lava-action@v8
         with:
           lava_token: ${{ secrets.LAVA_TOKEN }}
           lava_url: 'lava.infra.foundries.io'
