--- a/lava/rb8/boot.yaml
+++ b/lava/rb8/boot.yaml
@@ -4,7 +4,7 @@ actions:
       image:
         headers:
           Authentication: Q_GITHUB_TOKEN
-        url: "https://quic-yocto-fileserver-1029608027416.us-central1.run.app/qualcomm-linux/meta-qcom/15987997819-1//poky-altcfg/qcs6490-rb3gen2-core-kit/core-image-base-qcs6490-rb3gen2-core-kit.rootfs.qcomflash.tar.gz"
+        url: "https://quic-yocto-fileserver-1029608027416.us-central1.run.app/qualcomm-linux/meta-qcom/15987997819-1/poky-altcfg/qcs9075-iq-9075-evk/core-image-base-qcs9075-iq-9075-evk.rootfs.qcomflash.tar.gz"
     postprocess:
       docker:
         image: ghcr.io/foundriesio/lava-lmp-sign:main
@@ -13,7 +13,7 @@ actions:
         - cp overlay*.tar.gz overlay.tar.gz
         - echo "OVERLAY=overlay.tar.gz" >> $IMAGE_PATH/flash.settings
         - echo "OVERLAY_PATH=/home/" >> $IMAGE_PATH/flash.settings
-        - echo "DEVICE_TYPE=qcs6490-rb3gen2" >> $IMAGE_PATH/flash.settings
+        - echo "DEVICE_TYPE=qcs9100-rb8" >> $IMAGE_PATH/flash.settings
         - cat $IMAGE_PATH/flash.settings
     timeout:
       minutes: 5
@@ -21,7 +21,7 @@ actions:
 - deploy:
     images:
       image:
-        url: downloads://core-image-base-qcs6490-rb3gen2-core-kit.rootfs.qcomflash.tar.gz
+        url: downloads://core-image-base-qcs9075-iq-9075-evk.rootfs.qcomflash.tar.gz
       settings:
         url: downloads://flash.settings
       overlay:
@@ -35,7 +35,7 @@ actions:
       username: root
     method: minimal
     prompts:
-    - root@qcs6490-rb3gen2-core-kit
+    - root@qcs9075-iq-9075-evk
     timeout:
       minutes: 3
 - command:
@@ -55,8 +55,8 @@ actions:
 context:
   lava_test_results_dir: /home/lava-%s
   test_character_delay: 10
-device_type: qcs6490-rb3gen2-core-kit
-job_name: boot test (qcs6490-rb3gen2-core-kit) 12591501185
+device_type: qcs9075-iq-9075-evk
+job_name: boot test (qcs9075-iq-9075-evk) 15987997819-1
 metadata:
   downloads-url: "{{ DOWNLOADS_URL }}"
 priority: 50
