Change output URL to contain attempt ID
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
         value: ${{ jobs.save-build-url.outputs.url }}
 
 env:
-  BASE_ARTIFACT_URL: "https://example.com/uploads/${{ github.run_id }}"
+  BASE_ARTIFACT_URL: "https://example.com/uploads/${{ github.run_id }}-${{ github.run_attempt }}"
 
 jobs:
   print-trigger:
