--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,16 @@ jobs:
         id: printtrigger
         run: |
           echo "Triggered by ${{github.event_name}}"
+      - name: Save URL
+        id: save-url
+        run: |
+          echo "url=${BASE_ARTIFACT_URL}" >> $GITHUB_OUTPUT
+          echo "${BASE_ARTIFACT_URL}" > build_url
+      - name: Upload build URL
+        uses: actions/upload-artifact@v4
+        with:
+          name: build_url-${{ matrix.machine }}
+          path: build_url-${{ matrix.machine }}
   save-build-url:
     needs: print-trigger
     runs-on: ubuntu-latest
