--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         machine:
           - rb3g2
-          - imx8mm
+          - rb8
     runs-on: ubuntu-latest
     outputs:
       url: ${{ steps.printtrigger.outputs.url }}
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build_url-${{ matrix.machine }}
-          path: build_url-${{ matrix.machine }}
+          path: build_url
   save-build-url:
     needs: print-trigger
     runs-on: ubuntu-latest
