--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,10 @@ jobs:
         id: printtrigger
         run: |
           echo "Triggered by ${{github.event_name}}"
+          if [ ${{ matrix.machine }} = rb8 ] && [ ${{ github.run_attempt }} = 1 ]; then
+              echo "Failing ${{ matrix.machine }} in attempt ${{ github.run_attempt }}"
+              exit 1
+          fi
       - name: Save URL
         id: save-url
         run: |
