Allow the other build job to complete
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,9 @@ jobs:
         id: printtrigger
         run: |
           echo "Triggered by ${{github.event_name}}"
-          if [ ${{ matrix.machine }} = rb8 ] && [ ${{ github.run_attempt }} = 1 ]; then
+          if [ ${{ matrix.machine }} = rb3g2 ] && [ ${{ github.run_attempt }} = 1 ]; then
               echo "Failing ${{ matrix.machine }} in attempt ${{ github.run_attempt }}"
+              sleep 30
               exit 1
           fi
       - name: Save URL
