Use build_id to download build_url-* files in test job
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -18,3 +18,5 @@ jobs:
     needs: nightly
     secrets: inherit
     uses: ./.github/workflows/test.yaml
+    with:
+      build_id: ${{ github.run_id }}
