--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -16,6 +16,7 @@ permissions:
 
 jobs:
   test:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/test.yaml
     secrets: inherit
     with:
