--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Upload build URL
         uses: actions/upload-artifact@v4
         with:
-          name: build_url-${{ matrix.machine }}-${{ matrix-os }}
-          path: build_url-${{ matrix.machine }}-${{ matrix-os }}
+          name: build_url-${{ matrix.machine }}-${{ matrix.os }}
+          path: build_url-${{ matrix.machine }}-${{ matrix.os }}
