--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,7 +39,7 @@ jobs:
           pip install PyYAML
           git clone -b flasher https://gitlab.com/mwasilew/tuxlava.git
           cd tuxlava && pip install . && cd ..
-          python3 generatetests.py --config lava.yml --os ${{ matix.os }} --device ${{ matrix.machine }} --build-url "${BUILD_URL}"
+          python3 generatetests.py --config lava.yml --os ${{ matrix.os }} --device ${{ matrix.machine }} --build-url "${BUILD_URL}"
       - name: 'Upload test jobs'
         uses: actions/upload-artifact@v4
         with:
