--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,11 +13,11 @@ jobs:
     strategy:
       matrix:
         machine:
-          - rb3g2
-          - rb8
+          - qcs6490-rb3gen2-core-kit
+          - qrb2210-rb1
         os:
           - debian
-          - ubuntu
+          - qcom
     steps:
       - name: 'Download build URLs'
         uses: actions/download-artifact@v4
