Fix test job dependencies
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -47,6 +47,7 @@ jobs:
           path: ${{ matrix.machine }}-${{ matrix.os }}-*.yaml
 
   prepare-job-list:
+    needs: prepare-jobs
     runs-on: ubuntu-latest
     outputs:
       jobmatrix: ${{ steps.listjobs.outputs.jobmatrix }}
