--- a/lava.yml
+++ b/lava.yml
@@ -10,7 +10,9 @@ plan:
                 TESTS: "pwd, uname -a, ip a, dmesg"
           visibility: public
           download: path/to/download/relative/to/base.tar.gz
-        - name: smoke
+          headers:
+            - Authorization: LAVA_BASIC_AUTH
+        - name: wifi
           tests:
             - name: wifi
               parameters:
@@ -23,6 +25,8 @@ plan:
                 TIME_DELAY: 120s
           visibility: personal
           download: qcom/qcs6490-rb3gen2-core-kit/qcom-multimedia-image-qcs6490-rb3gen2-core-kit.rootfs.qcomflash.tar.gz
+          headers:
+            - Authorization: LAVA_BASIC_AUTH
           secrets:
             - AP_NAME
             - AP_PASSWORD
@@ -36,6 +40,8 @@ plan:
                 TESTS: "pwd, uname -a, ip a, dmesg"
           visibility: public
           download: qcom/qcs6490-rb3gen2-core-kit/qcom-multimedia-image-qcs6490-rb3gen2-core-kit.rootfs.qcomflash.tar.gz
+          headers:
+            - Authorization: LAVA_BASIC_AUTH
 
   qrb2210-rb1:
     debian:
@@ -48,6 +54,8 @@ plan:
                 TESTS: "pwd, uname -a, ip a, dmesg"
           visibility: public
           download: qcom/qrb2210-rb1-core-kit/qcom-multimedia-image-qrb2210-rb1-core-kit.rootfs.qcomflash.tar.gz
+          headers:
+            - Authorization: LAVA_BASIC_AUTH
         - name: wifi
           tests:
             - name: wifi
@@ -61,6 +69,8 @@ plan:
                 TIME_DELAY: 120s
           visibility: personal
           download: path/to/download/relative/to/base.tar.gz
+          headers:
+            - Authorization: LAVA_BASIC_AUTH
           secrets:
             - AP_NAME
             - AP_PASSWORD
@@ -74,5 +84,7 @@ plan:
                 TESTS: "pwd, uname -a, ip a, dmesg"
           visibility: public
           download: qcom/qrb2210-rb1-core-kit/qcom-multimedia-image-qrb2210-rb1-core-kit.rootfs.qcomflash.tar.gz
+          headers:
+            - Authorization: LAVA_BASIC_AUTH
 
 
