--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         machine:
           - qcs6490-rb3gen2-core-kit
-          - qrb2210-rb1
+          - qrb2210-rb1-core-kit
         os:
           - debian
           - qcom
@@ -84,7 +84,7 @@ jobs:
 
       - name: Submit ${{ matrix.target }}
         timeout-minutes: 20
-        uses: foundriesio/lava-action@v8
+        uses: mwasilew/lava-action@improve_colours
         with:
           lava_token: ${{ secrets.LAVA_TOKEN }}
           lava_url: 'lava.infra.foundries.io'
