--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
           - qrb2210-rb1-core-kit
         os:
           - debian
-          - qcom
+          - qcom-distro
     steps:
       - uses: actions/checkout@v4
         with:
