--- a/lava/rb8/boot.yaml
+++ b/lava/rb8/boot.yaml
@@ -3,8 +3,8 @@ actions:
     images:
       image:
         headers:
-          Authentication: Q_GITHUB_TOKEN
-        url: "https://quic-yocto-fileserver-1029608027416.us-central1.run.app/qualcomm-linux/meta-qcom/15987997819-1/poky-altcfg/qcs9075-iq-9075-evk/core-image-base-qcs9075-iq-9075-evk.rootfs.qcomflash.tar.gz"
+          Authorization: LAVA_BASIC_AUTH
+        url: 'https://s.lava.infra.foundries.io/ride_sx/core-image-base-qcs9100-ride-sx.rootfs.qcomflash.tar.gz'
     postprocess:
       docker:
         image: ghcr.io/foundriesio/lava-lmp-sign:main
@@ -21,7 +21,7 @@ actions:
 - deploy:
     images:
       image:
-        url: downloads://core-image-base-qcs9075-iq-9075-evk.rootfs.qcomflash.tar.gz
+        url: downloads://core-image-base-qcs9100-ride-sx.rootfs.qcomflash.tar.gz
       settings:
         url: downloads://flash.settings
       overlay:
@@ -35,7 +35,7 @@ actions:
       username: root
     method: minimal
     prompts:
-    - root@qcs9075-iq-9075-evk
+    - root@(.*):[/~]#
     timeout:
       minutes: 3
 - command:
