Produce artifacts in a matrix
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,13 +32,49 @@ jobs:
         with:
           name: build_url-${{ matrix.machine }}-${{ matrix.os }}
           path: build_url-${{ matrix.machine }}-${{ matrix.os }}
+  additional-artifacts:
+    strategy:
+      fail-fast: true
+      matrix:
+        machine:
+          - m1
+          - m2
+          - m3
+          - m4
+          - m5
+          - m6
+          - m7
+          - m8
+          - m9
+          - m10
+          - m11
+          - m12
+          - m13
+          - m14
+          - m15
+          - m16
+          - m17
+          - m18
+          - m19
+          - m20
+          - m21
+          - m22
+          - m23
+          - m24
+          - m25
+        os:
+          - o1
+          - o2
+          - o3
+          - o4
+    runs-on: ubuntu-latest
+    steps:
+
       - name: Additional Artifacts
         run: |
-          for i in $(seq 100); do
-              echo "artifact ${i}" > "artifact.${{ matrix.machine }}-${{ matrix.os }}.${i}.txt"
-          done
+          echo "artifact" > "artifact.${{ matrix.machine }}-${{ matrix.os }}.txt"
       - name: Upload Additional artifacts
         uses: actions/upload-artifact@v4
         with:
           name: artifact.${{ matrix.machine }}-${{ matrix.os }}.txt
-          path: artifact.${{ matrix.machine }}-${{ matrix.os }}.*.txt
+          path: artifact.${{ matrix.machine }}-${{ matrix.os }}.txt
