--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -51,8 +51,8 @@ jobs:
       - name: 'Upload test jobs'
         uses: actions/upload-artifact@v4
         with:
-          name: testjobs-${{ matrix.machine }}-${{ matrix.os }}
-          path: ${{ matrix.machine }}-${{ matrix.os }}-*.yaml
+          name: testjobs-${{ matrix.machine }}-${{ matrix.distro.name }}
+          path: ${{ env.MACHINE}}*-${{ matrix.distro.name }}-*.yaml
 
   prepare-job-list:
     needs: prepare-jobs
