--- a/.github/workflows/publish-results.yml
+++ b/.github/workflows/publish-results.yml
@@ -30,10 +30,10 @@ jobs:
       - name: Download result files
         uses: actions/download-artifact@v4
         with:
-            run-id: ${{ inputs.workflow_id }}
+#            run-id: ${{ inputs.workflow_id }}
             path: artifacts
-            github-token: ${{ github.token }}
-            pattern: testjobs-*
+#            github-token: ${{ github.token }}
+#            pattern: testjobs-*
 
       - name: "List files"
         run: |
