Fix workflow calls
Update test.yaml to test.yml in calling workflows

Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -17,6 +17,6 @@ jobs:
   test:
     needs: nightly
     secrets: inherit
-    uses: ./.github/workflows/test.yaml
+    uses: ./.github/workflows/test.yml
     with:
       url: ${{ needs.nightly.outputs.artifact_url }}
