--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -13,7 +13,7 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
   test:
-    uses: ./.github/workflows/test.yaml
+    uses: ./.github/workflows/test.yml
     needs: [build]
     secrets: inherit
     with:
