--- a/.github/workflows/publish-results.yml
+++ b/.github/workflows/publish-results.yml
@@ -35,6 +35,7 @@ jobs:
             github-token: ${{ github.token }}
 
       - name: Download result files PR
+        if: ${{ github.workflow_id != inputs.workflow_id }}
         uses: actions/download-artifact@v6
         with:
             path: artifacts
