Fix lava-test-plans installation path
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Run lava-test-plans
         run: |
-          pip install lava-test-plans/lava_test_plans
+          pip install lava-test-plans
           lava-test-plans --help
 
       - name: "Generate testjobs"
