--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,6 +45,26 @@ jobs:
         run: |
           pip install lava-test-plans
           lava-test-plans --help
+          echo "PROJECT_NAME=${GITHUB_REPOSITORY#*/}" >> variables.ini
+          echo "LAVA_JOB_PRIORTIY=50" >> variables.ini
+          echo "DEVICE_TYPE=${{ matrix.machine }}" >> variables.ini
+          echo "OS_INFO=qcom-distro" >> variables.ini
+          echo "BUILD_NUMBER=${{ github.run_id }}-${{ github.run_attempt }}" >> variables.ini
+          echo "DOCKER_IMAGE_POSTPROCESS=ghcr.io/foundriesio/lava-lmp-sign:main" >> variables.ini
+          echo "BOOT_IMG_FILE=boot-apq8096-db820c-qcom-armv8a.img" >> variables.ini
+          echo "ROOTFS_IMG_FILE=core-image-base-qcom-armv8a.rootfs.ext4" >> variables.ini
+          echo "BUILD_DOWNLOAD_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/" >> variables.ini
+          echo "AUTH_HEADER_NAME=Authentication" >> variables.ini
+          echo "AUTH_HEADER_TOKEN=PICANHA_TOKEN" >> variables.ini
+          IMAGE_TYPE="core-image-base"
+          if [ "${{ matrix.distro.name }}" = "qcom-distro" ]; then
+            IMAGE_TYPE="qcom-multimedia-image"
+          fi
+          echo "IMAGE_FILE_NAME=${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> variables.ini
+          echo "ROOTFS_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> variables.ini
+          echo "AUTO_LOGIN_PASSWORD_PROMPT=Password" >> variables.ini
+          echo "AUTO_LOGIN_PASSWORD=oelinux123" >> variables.ini
+          lava-test-plans --dry-run --environment variables.ini --test-plan "${GITHUB_REPOSITORY#*/}/${{ matrix.distro.name }}" --device-type "${{ matrix.machine }}" --verbose 10
 
       - name: "Generate testjobs"
         run: |
