--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,8 @@ jobs:
         run: |
           pip install lava-test-plans
           lava-test-plans --help
-          echo "PROJECT_NAME=${GITHUB_REPOSITORY#*/}" >> variables.ini
+          #echo "PROJECT_NAME=${GITHUB_REPOSITORY#*/}" >> variables.ini
+          echo "PROJECT_NAME=meta-qcom" >> variables.ini
           echo "LAVA_JOB_PRIORTIY=50" >> variables.ini
           echo "DEVICE_TYPE=${{ matrix.machine }}" >> variables.ini
           echo "OS_INFO=qcom-distro" >> variables.ini
@@ -64,7 +65,8 @@ jobs:
           echo "ROOTFS_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> variables.ini
           echo "AUTO_LOGIN_PASSWORD_PROMPT=Password" >> variables.ini
           echo "AUTO_LOGIN_PASSWORD=oelinux123" >> variables.ini
-          lava-test-plans --dry-run --variables variables.ini --test-plan "${GITHUB_REPOSITORY#*/}/${{ matrix.distro.name }}" --device-type "${{ matrix.machine }}" --verbose 10
+          #lava-test-plans --dry-run --variables variables.ini --test-plan "${GITHUB_REPOSITORY#*/}/${{ matrix.distro.name }}" --device-type "${{ matrix.machine }}" --verbose 10
+          lava-test-plans --dry-run --variables variables.ini --test-plan "meta-qcom/${{ matrix.distro.name }}" --device-type "${{ matrix.machine }}" --verbose 10
 
       - name: "Generate testjobs"
         run: |
